--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Device Status Tracker</title>
+    <title>Device Ping Status Tracker</title>
     <script>
         async function fetchStatuses() {
             const response = await fetch('/status');
